# googleballs-app

./: .gitignore  .gitmodules  LICENSE  README.md  find.py
.github/workflows/: 3ds.yml  build.yml  cleanup-actions.yml  ds.yml  j2me.yml  ps2.yml  ps3.yml  psp.yml  psvita.yml  tizen.yml  upload.yml  wii.yml  wiiu.yml
3ds/: Makefile  main.cpp
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
asahi-touchbar/: Cargo.toml  info.md
asahi-touchbar/src/: display.rs  googleballs.rs  main.rs
docs/: LICENSE  compiling.md  installing.md
ds/: Makefile
ds/graphics/: ball.grit
ds/source/: main.cpp
electron/: package-lock.json  package.json
electron/src/: index.js  removeUnneededFiles.js
flash-as2/: .actionScriptProperties  .project  ColorRGB.as  Point.as  PointCollection.as  Vector3.as  google-balls.fla
flash-as3/: .project  google-balls.fla  google-balls.html
haiku/: GoogleBalls.rdef  Makefile  main.cpp
ios/Google Balls/: ContentView.swift  Google_BallsApp.swift  ViewController.swift  balls.html
ios/Google Balls.xcodeproj/: project.pbxproj
ios/Google BallsTests/: Google_BallsTests.swift
ios/Google BallsUITests/: Google_BallsUITests.swift  Google_BallsUITestsLaunchTests.swift
j2me/: build.xml
j2me/src/: GoogleBallsMIDlet.java
native/: balls.cpp  compile-macos.sh  compile.bat  compile.sh
native-gtk/: Makefile  main.c
native-gtk/icon/: balls.c
native-rust/: Cargo.toml  build.rs
native-rust/images/: icon-16.rgba  icon-64.rgba
native-rust/src/: build.rs  lib.rs  main.rs
native-rust/src/images/: icon-32.rgba
native-sdl2/: .gitignore  Makefile
native-sdl2/icon/: balls.c  balls.h  resource.h
native-terminal/: .gitignore  Makefile  balls.cpp
native-wayland/: Makefile  main.cpp  xdg-decoration-protocol.c
native/icon/: balls.c  balls.h  resource.rc
nds/: Makefile  main.cpp
ogxbox/: Makefile  main.cpp
ps2/: Makefile  main.c
ps3/: Makefile  main.cpp  sfo.py  sfo.xml
ps3/pkg/: PARAM.SFO
psp/: Makefile  main.cpp
tauri/: package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tizen/: .project  config.xml  index.html
tizen/.sign/: .manifest.tmp  author-signature.xml  signature1.xml
tizen/css/: style.css
tizen/js/: main.js
uwp/: GoogleBallsUWP.sln
uwp/GoogleBallsUWP/: App.xaml  App.xaml.cs  GoogleBallsUWP.csproj  MainPage.xaml  (+5 more)
vita/: .gitignore  CMakeLists.txt
vita/sce_sys/livearea/contents/: template.xml
vita/src/: main.cpp
vscode/: README.md  package.json
web/: balls.css  balls.js  index.html  manifest.json  sw.js
webOS/: appinfo.json  index.html  package.json
wii/: Makefile  main.cpp  meta.xml
wiiu/: CMakeLists.txt  main.cpp  meta.xml
wp8/: gitignore.txt
(+65 files in other folders)
